fixed templates and redeployment

--- a/photos/templates/navbar.html
+++ b/photos/templates/navbar.html
@@ -1,8 +1,8 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-<link href="https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps+Lora" rel="stylesheet">
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar">
-  <a class="navbar-brand" href="/" id="gallery"><img src="/static/photos/logo.png" class = "img-responsive" style="width:50px;height: 50px;">&nbsp;ImageSplash</a>
+  <a class="navbar-brand head" href="/" id="gallery"><img src="/static/photos/logo.png" class = "img-responsive" style="width:50px;height: 50px;">&nbsp;<b>ImageSplash</b></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -10,7 +10,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item dropdown dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle locations" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Locations&nbsp;<i class="fas fa-map-marker-alt"></i>
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="background:rgb(32, 32, 32)">
@@ -26,7 +26,7 @@
           </div>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle categories" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Categories
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="background:rgb(32, 32, 32)">
@@ -45,7 +45,7 @@
      @import url('https://fonts.googleapis.com/css?family=Nunito|Oleo+Script+Swash+Caps');
 
     .navbar{
-      font-family: 'Nunito', sans-serif;
+      font-family: 'Lora', serif;
       width: 100%;
       font-size: 20px;
       position: fixed;
@@ -58,4 +58,18 @@
     .dropdown-item{
       color: whitesmoke;
     }
+
+    .head{
+      color: whitesmoke !important;
+    }
+    .head:hover{
+      color: green !important;
+    }
+    .categories:hover{
+      color: green !important;
+    }
+    .locations:hover{
+      color: green !important;
+    }
+
 </style>
