--- a/photos/templates/index.html
+++ b/photos/templates/index.html
@@ -4,8 +4,8 @@
 
 <br>
 <br>
-<div class="search">
-  <div class="contents">
+<div class="container-fluid search">
+  <div class="col-xs-12 col-sm-6 col-md-12 contents">
     <div class="container image">
       <!-- <h2 id="title"><b>Welcome To ImageSplash</b></h2> -->
       <form class="form" role="search" action="{% url 'search_image' %}">
@@ -14,7 +14,9 @@
           <input type="text" class="form-control input" placeholder=" Search Image by category" name="image">&nbsp;&nbsp;   <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="button"><i class="fas fa-search"></i></button>
           <br>
         </div>
-        <p class="searches" style="color:whitesmoke;font-family: 'Nunito', sans-serif;font-size: 25px;">Trending searches:Music,Sports etc</p>
+    
+        <p class="searches" style="color:whitesmoke;font-family: 'Lora', serif;font-size: 25px;">Trending searches:Music,Sports etc</p>
+       
       </form>
     </div>
   </div>
@@ -25,41 +27,43 @@
     <div class="row">
       {% for photo in photos %}
       <div class="col-xs-12 col-sm-6 col-md-4 images">
-        <div class="thumbnail">
-          <img src="{{photo.image.url}}"  data-toggle="modal" data-target="#exampleModalCenter{{photo.id}}" class = "img-responsive imagee" alt="" style="height:400px;width: 360px;">
+        <div class="thumbnail" style="width:100% !important;">
+          <img src="{{photo.image.url}}"  data-toggle="modal" data-target="#exampleModalCenter{{photo.id}}" class = "img-responsive imagee" alt="" style="height:400px;width: 100% !important;">
           
           
           <!-- Modal -->
-          <div class="modal fade modal" id="exampleModalCenter{{photo.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered" role="document">
-              <div class="modal-content" style="font-family: 'Nunito', sans-serif;background: rgb(29, 29, 29);color:whitesmoke;">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalCenterTitle" style="font-size:30px;"><b>{{photo.name}}</b></h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
+          <div class="col-xs-12 col-sm-6 col-md-4">
+              <div class="modal fade" style="width:100% !important;" id="exampleModalCenter{{photo.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                  <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+                    <div class="modal-content" style="font-family: 'Lora', serif;background: rgb(29, 29, 29);color:whitesmoke;">
+                      <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalCenterTitle" style="font-size:30px;"><b>{{photo.name}}</b></h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                      <div class="modal-body">
+                        <img src="{{photo.image.url}}"  class = "img-responsive" alt="" style="height:500px;width: 100%;">
+                      </div>
+                      <div class="modal-body">
+                        <form action="">
+                          <input type="text" value="https://imgsplash.herokuapp.com{{photo.image.url}}" id="" style="width:100%;height:40px;">
+                          <br>
+                          <button type="button" class="btn btn-outline-success" style="float:right;" value="https://imgsplash.herokuapp.com{{photo.image.url}}" onclick="copyLink(this.value)"  >Copy Link</button>
+                        </form>
+                        <br>
+                        <br>
+                        <p style="font-size:22px;padding-right: 70px;"><b>Category:</b> {{photo.category}}</p>
+                        <p style="font-size:22px;padding-right: 70px;"><b>Description:</b> {{photo.description}}</p>
+                        
+                        
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-outline-success" data-dismiss="modal">Close</button>
+                      </div>
+                    </div>
+                  </div>
                 </div>
-                <div class="modal-body">
-                  <img src="{{photo.image.url}}"  class = "img-responsive" alt="" style="height:400px;width: 465px;">
-                </div>
-                <div class="modal-body">
-                  <form action="">
-                    <input type="text" value="https://imgsplash.herokuapp.com{{photo.image.url}}" id="" style="width:100%;height:40px;">
-                    <br>
-                    <button type="button" class="btn btn-outline-success" style="float:right;" value="https://imgsplash.herokuapp.com{{photo.image.url}}" onclick="copyLink(this.value)"  >Copy Link</button>
-                  </form>
-                  <br>
-                  <br>
-                  <p style="font-size:22px;padding-right: 70px;"><b>Category:</b> {{photo.category}}</p>
-                  <p style="font-size:22px;padding-right: 70px;"><b>Description:</b> {{photo.description}}</p>
-                  
-                  
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-outline-success" data-dismiss="modal">Close</button>
-                </div>
-              </div>
-            </div>
           </div>
         </div>
         <br>
@@ -85,19 +89,19 @@
 </body>
 
 <style>
-  @import url('https://fonts.googleapis.com/css?family=Nunito|Oleo+Script+Swash+Caps');
+  @import url('https://fonts.googleapis.com/css?family=Nunito|Lora|Oleo+Script+Swash+Caps');
   
   body{
     background: #d6d5d5;
   }
   
   .search{
-    background: url(/static/photos/cam.jpeg) no-repeat 0px 0px;
+    background: url(/static/photos/cam.jpeg);
     background-repeat: no-repeat;
     background-attachment:fixed;
     background-size:cover;
     background-position: center;
-    height: 500px;
+    height: 100%;
     
   }
   .searchh{
@@ -105,6 +109,7 @@
   }
   .input{
     height: 40px;
+    font-family: 'Lora', serif;
   }
   .searches{
     width: 100px;
@@ -115,27 +120,29 @@
   }
   /* Safari 4.0 - 8.0 */
 @-webkit-keyframes mymove {
-    from {left: 200px;}
-    to {left: 0px;}
+    from {left: 400px;}
+    to {left: -28px;}
 }
 
 @keyframes mymove {
-    from {left: 200px;}
-    to {left: 0px;}
+    from {left: 400px;}
+    to {left: -28px;}
 }
   ::placeholder{
-    font-family: 'Nunito', sans-serif;
+    font-family: 'Lora', serif;
     font-size: 21px;
+    color: rgb(51, 51, 51) !important;
+    text-align: center;
   }
   #button{
-    font-family: 'Nunito', sans-serif;
+    font-family: 'Lora', serif;
   }
   .image{
     padding-top: 70px;
   }
   
   #title{
-    font-family: 'Nunito', sans-serif;
+    font-family: 'Lora', serif;
     font-size: 60px;
   }
   /*--Banner--*/
@@ -157,6 +164,7 @@
     min-height: 450px;
     width: inherit;
     padding-top: 70px;
+
   }
   .contents-1{
     min-height: inherit;
@@ -182,7 +190,8 @@
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     transition: all 0.3s ease 0s;
     cursor: pointer;
-    border-radius: 5px;
+    border-radius: 10px;
+    width: 100% !important;
   }
   .imagee:hover{
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
