--- a/photos/templates/index.html
+++ b/photos/templates/index.html
@@ -15,7 +15,7 @@
           <br>
         </div>
     
-        <p class="searches" style="color:whitesmoke;font-family: 'Lora', serif;font-size: 20px;">Trending searches:Music,Sports etc</p>
+        <p class="searches" style="color:whitesmoke;font-family: 'Lora', serif;font-size: 20px;text-align: center !important;">Trending searches:Music,Sports etc</p>
        
       </form>
     </div>
@@ -115,8 +115,6 @@
     width: 100px;
     height: 100px;
     position: relative;
-    -webkit-animation: mymove 5s infinite; /* Safari 4.0 - 8.0 */
-    animation: mymove 5s infinite;
   }
   ::placeholder{
     font-family: 'Lora', serif;
