--- a/photos/templates/navbar.html
+++ b/photos/templates/navbar.html
@@ -6,70 +6,71 @@
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-
+  
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item dropdown dropdown">
-          <a class="nav-link dropdown-toggle locations" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Locations&nbsp;<i class="fas fa-map-marker-alt"></i>
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="background:rgb(32, 32, 32)">
-            <a class="dropdown-item" href="/location/3">Nairobi</a>
-            <a class="dropdown-item" href="/location/4">Mombasa</a>
-            <a class="dropdown-item" href="/location/1">Paris</a>
-            <a class="dropdown-item" href="/location/2">New York</a>
-            <a class="dropdown-item" href="/location/7">Great Britain</a>
-            <a class="dropdown-item" href="/location/6">Spain</a>
-            <a class="dropdown-item" href="/location/5">America</a>
-            <a class="dropdown-item" href="/location/9">South America</a>
-            <a class="dropdown-item" href="/location/8">Australia</a>
-          </div>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle categories" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Categories
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="background:rgb(32, 32, 32)">
-            <a class="dropdown-item" href="/category/1">Music</a>
-            <a class="dropdown-item" href="/category/2">Cities</a>
-            <a class="dropdown-item" href="/category/4">Sports</a>
-            <a class="dropdown-item" href="/category/5">Nature</a>
-            <a class="dropdown-item" href="/category/3">Technology</a>
-          </div>
-        </li>
+        <a class="nav-link dropdown-toggle locations" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color:#ece3d1;">
+          Locations&nbsp;<i class="fas fa-map-marker-alt"></i>
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="background:rgb(32, 32, 32)">
+          <a class="dropdown-item" href="/location/3">Nairobi</a>
+          <a class="dropdown-item" href="/location/4">Mombasa</a>
+          <a class="dropdown-item" href="/location/1">Paris</a>
+          <a class="dropdown-item" href="/location/2">New York</a>
+          <a class="dropdown-item" href="/location/7">Great Britain</a>
+          <a class="dropdown-item" href="/location/6">Spain</a>
+          <a class="dropdown-item" href="/location/5">America</a>
+          <a class="dropdown-item" href="/location/9">South America</a>
+          <a class="dropdown-item" href="/location/8">Australia</a>
+        </div>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle categories" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color:#ece3d1;">
+          Categories
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="background:rgb(32, 32, 32)">
+          <a class="dropdown-item" href="/category/1">Music</a>
+          <a class="dropdown-item" href="/category/2">Cities</a>
+          <a class="dropdown-item" href="/category/4">Sports</a>
+          <a class="dropdown-item" href="/category/5">Nature</a>
+          <a class="dropdown-item" href="/category/3">Technology</a>
+        </div>
+      </li>
     </ul>
   </div>
 </nav>
 
 <style>
-     @import url('https://fonts.googleapis.com/css?family=Nunito|Oleo+Script+Swash+Caps');
-
-    .navbar{
-      font-family: 'Lora', serif;
-      width: 100%;
-      font-size: 20px;
-      position: fixed;
-      z-index: 1;
-
-    }
-    #gallery{
-      font-size: 30px;
-    }
-    .dropdown-item{
-      color: whitesmoke;
-    }
-
-    .head{
-      color: whitesmoke !important;
-    }
-    .head:hover{
-      color: green !important;
-    }
-    .categories:hover{
-      color: green !important;
-    }
-    .locations:hover{
-      color: green !important;
-    }
-
+  @import url('https://fonts.googleapis.com/css?family=Nunito|Oleo+Script+Swash+Caps');
+  
+  .navbar{
+    font-family: 'Lora', serif;
+    width: 100%;
+    font-size: 20px;
+    position: fixed;
+    z-index: 1;
+    
+  }
+  #gallery{
+    font-size: 30px;
+    
+  }
+  .dropdown-item{
+    color:#ece3d1;
+  }
+  
+  .head{
+    color:#ece3d1 !important;
+  }
+  .head:hover{
+    color: green !important;
+  }
+  .categories:hover{
+    color: green !important;
+  }
+  .locations:hover{
+    color: green !important;
+  }
+  
 </style>
